test/gpu/native/kernelFnCalls/callHalts.good
callHalts.chpl:5: error: halt reached - i is too big!
"Some way to indicate this ran on the GPU"
